[package]
name = "outcrop-final"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"
md5 = "0.7.0"
pdb = "0.8.0"
subprocess = "0.2.9"
injrs = "0.1.2"

[build-dependencies]
cc = "1.0"